refactor(core): 优化代码质量和外部进程执行方式
- 将 Runtime.exec() 替换为 ProcessBuilder 以提高安全性并正确处理命令参数
- 添加了 Util.splitCommandTokens 方法用于安全的命令解析
- 引入 UrlUtils 类处理不同操作系统的路径和URL转换问题
- 为多个GUI组件类添加 @SuppressWarnings("serial") 注解消除警告
- 更新 GTFIndexer 中的 AsciiLineReader 创建方式使用静态工厂方法
- 删除了已弃用的 SimplestModuleController 类
- 移除不再需要的部署脚本 deploy_src2jar.bash